// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> matches snapshot (closed) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fcf8ff",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        false,
      ]
    }
    testID="collapsible-pressable"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
        ]
      }
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="chevron.right"
        size={14}
        style={
          [
            {
              "height": 14,
              "width": 14,
            },
            {
              "transform": [
                {
                  "rotate": "90deg",
                },
              ],
            },
          ]
        }
        tint={4279966500}
        tintColor="#1b1b24"
        type="monochrome"
        weight="bold"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#1b1b24",
          },
          false,
          false,
          false,
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.28,
            "lineHeight": 20,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      Snap
    </Text>
  </View>
</View>
`;

exports[`<Collapsible /> matches snapshot (open) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fcf8ff",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        },
        false,
      ]
    }
    testID="collapsible-pressable"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
        ]
      }
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="chevron.right"
        size={14}
        style={
          [
            {
              "height": 14,
              "width": 14,
            },
            {
              "transform": [
                {
                  "rotate": "-90deg",
                },
              ],
            },
          ]
        }
        tint={4279966500}
        tintColor="#1b1b24"
        type="monochrome"
        weight="bold"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#1b1b24",
          },
          false,
          false,
          false,
          {
            "fontFamily": "JetBrains Mono",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0.28,
            "lineHeight": 20,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      Snap Open
    </Text>
  </View>
  <View
    entering={
      {
        "duration": [MockFunction] {
          "calls": [
            [
              200,
            ],
            [
              200,
            ],
            [
              200,
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": [Circular],
            },
            {
              "type": "return",
              "value": [Circular],
            },
            {
              "type": "return",
              "value": [Circular],
            },
          ],
        },
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "borderRadius": 16,
            "marginLeft": 24,
            "marginTop": 16,
            "padding": 24,
          },
        ]
      }
    >
      <Text>
        Open Content
      </Text>
    </View>
  </View>
</View>
`;
